Refactor java 18 into java 11